k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rose-web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rose-web
  template:
    metadata:
      labels:
        app: rose-web
    spec:
      containers:
      - name: rose-web
        image: kondavenkat035/rose-web:latest
        ports:
        - containerPort: 80
