k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rose-web-service
spec:
  type: ClusterIP
  selector:
    app: rose-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
